--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="header__content">
             <h1 class="header__title">Amazing Shop Layouts</h1>
             <p class="header__desc">Grayson Collection</p>
-            <a href="" class="header__link">SHOP NOW</a>
+            <a href="#modal" class="header__link">SHOP NOW</a>
         </div>
     </header>
     <main>
@@ -239,5 +239,12 @@
         </div>
         <p class="footer__copy">Designed and Powered by <span>ZICO</span></p>
     </footer>
+    
+    <div class="window" id="modal">
+        <form action="" class="window__form"></form>
+        <a href="" class="window__close">
+            <i class="far fa-times-circle"></i>
+        </a>
+    </div>
 </body>
 </html>
